# xserver

./: configure.ac
hw/xwayland/: Makefile.am  xwayland-glamor.c  xwayland-input.c  xwayland-output.c  xwayland.h
